Fixed img: center image and red: right align

--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,9 @@ p {
 
 img {
     width: 250px;
-    text-align: center;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     border: 10px dashed #ffffff;
 }
 
@@ -45,7 +47,7 @@ div {
 
 .red {
     background-color: #ff0000;
-    text-align: left;
+    text-align: right;
     margin-right: 50px;
     border: 2px,;
 
